-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.4, 6.6.1
-
None
-
-
92b919aff (dev), 612c00a0b (6.8), 845193aa6 (6.7), e5e4da09e (tqtc/lts-6.5), 3a6c2d920 (dev)
In my QML application I want to use exchangeable Singletons holding properties (as StyleSheets, so to speak).
To have some kind of "virutal base class" defining all required properties, I've created a base QtObject holding all property declarations using required property. This way – I expected – any unset property was reported as an error.
The attached example holds the "virtual base class" with two properties:
import QtQuick QtObject { required property int thisIsSet required property int thisIsNotSet }
The Singleton implements the base object and should set both, but intentionally only set one:
pragma Singleton import QtQuick SingletonBase { // Set the first "required" property: thisIsSet: 99 // Do NOT set the second "required" property: // thisIsNotSet: 11 }
When using the Singleton, the unset required property does not produce an error:
... Text { text: "thisIsSet: " + Singleton.thisIsSet } Text { text: "thisIsNotSet: " + Singleton.thisIsNotSet } ...
Its value is "0":
thisIsSet: 99 thisIsNotSet: 0
Other types also use some default (i.e. color = "black").
Expected Result:
"thisIsNotSet" is reported similarly to:
QQmlApplicationEngine failed to create component
"Required property thisIsNotSet was not initialized"
- is duplicated by
-
QTBUG-122977 Missing QML error in singletons
-
- Closed
-
For Gerrit Dashboard: QTBUG-122784 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543620,8 | Warn about unset required properties on composite singletons | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
567716,2 | Warn about unset required properties on composite singletons | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
567780,3 | Warn about unset required properties on composite singletons | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
567997,2 | Warn about unset required properties on composite singletons | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
600984,5 | Engine: validate that C++ defined singletons have no required properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |